change index.html add icon fonts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
     <title>Survival Page</title>
 </head>
 <body>
-    
+    <div class="container">
+        <nav class="navbar">
+            <img class="navbar__logo" src="img/black_logo.png" alt="Logo">
+            <div class="navbar__elements">
+                <a href="#" class="elements__item">our competitors</a>
+                <a href="#" class="elements__item">for professionals</a>
+                <a href="#" class="elements__item">contact</a>
+                <div class="elemets__line"></div>
+                <a href="#"><span class="icon-user"></span></a>
+                <a href="#"><span class="icon-magnifying-glass"></span></a>
+            </div>
+        </nav>
+        <header class="header">
+            <div class="header__sidebar">
+                <div class="sidebar__heading">
+                    <h2 class="heading__black">Find out if you can</h2>
+                    <h1 class="heading__red">survive</h1>
+                </div>
+                <div class="sidebar__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, aspernatur ab!</div>
+                <img class="sidebar__arrow" src="img/arrow.png" alt="Arrow">
+                <div class="sidebar__icons">
+                    <a href="#"><span class="icon-facebook"></span></a>
+                    <a href="#"><span class="icon-twitter"></span></a>
+                    <a href="#"><span class="icon-youtube"></span></a>
+                </div>
+            </div>
+            <div class="header__photo">
+                <img src="img/img_header.png" alt="Mountain">
+                <div class="photo__arrows">
+                    <img class="sidebar__arrow" src="img/arrow.png" alt="Arrow">
+                    <img class="sidebar__arrow" src="img/arrow.png" alt="Arrow">
+                </div>
+            </div>
+            <div class="header__pages">
+                <div class="pages__item">01</div>
+                <div class="pages__item">02</div>
+                <div class="pages__item">03</div>
+            </div>
+        </header>
+
+    </div>
 </body>
 </html>
