--- a/index.html
+++ b/index.html
@@ -47,6 +47,44 @@
                 <div class="pages__item">03</div>
             </div>
         </header>
+        <section class="challenges">
+            <h4 class="chellenges__heading">Popular challenges</h4>
+            <div class="challenges__post">
+                <img src="img/fire.png" alt="Campfire" class="post__photo">
+                <h6 class="post__sub-heading">key skills</h6>
+                <h5 class="post__heading">Friction-Based Fire Making</h5>
+                <p class="post__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus debitis recusandae!</p>
+                <a href="#"><span class="icon-x"></span>find out more</a>
+            </div>
+            <div class="challenges__post">
+                <img src="img/img_fire.png" alt="Shelter" class="post__photo">
+                <h6 class="post__sub-heading">key skills</h6>
+                <h5 class="post__heading">Make your own shelter</h5>
+                <p class="post__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus debitis recusandae!</p>
+                <a href="#"><span class="icon-x"></span>find out more</a>
+            </div>
+            <div class="challenges__post">
+                <img src="img/meal.png" alt="Meal" class="post__photo">
+                <h6 class="post__sub-heading">key skills</h6>
+                <h5 class="post__heading">Prepare a meal in the forest</h5>
+                <p class="post__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus debitis recusandae!</p>
+                <a href="#"><span class="icon-x"></span>find out more</a>
+            </div>
+            <div class="challenges__mission">
+                <div class="mission__number">01</div>
+                <div class="mission__endurance">
+                    <h2 class="endurance__heading-1">endurance</h2>
+                    <h3 class="endurance__sub-heading">challenges</h3>
+                    <img src="img/boots.png" alt="Boots" class="endurance__boots">
+                </div>
+                <div class="mission__post">
+                    <h3 class="post__heading-2">Mission</h3>
+                    <h5 class="post__sub-heading-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h5>
+                    <p class="post__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi harum perspiciatis quibusdam quod incidunt aperiam sit molestias nobis, voluptas adipisci voluptatibus.</p>
+                    <a href="#"><span class="icon-x"></span>find out more</a>
+                </div>
+            </div>
+        </section>
 
     </div>
 </body>
