--- a/index.html
+++ b/index.html
@@ -1,91 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Survival Page</title>
-</head>
-<body>
-    <div class="container">
-        <nav class="navbar">
-            <img class="navbar__logo" src="img/black_logo.png" alt="Logo">
-            <div class="navbar__elements">
-                <a href="#" class="elements__item">our competitors</a>
-                <a href="#" class="elements__item">for professionals</a>
-                <a href="#" class="elements__item">contact</a>
-                <div class="elemets__line"></div>
-                <a href="#"><span class="icon-user"></span></a>
-                <a href="#"><span class="icon-magnifying-glass"></span></a>
-            </div>
-        </nav>
-        <header class="header">
-            <div class="header__sidebar">
-                <div class="sidebar__heading">
-                    <h2 class="heading__black">Find out if you can</h2>
-                    <h1 class="heading__red">survive</h1>
-                </div>
-                <div class="sidebar__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, aspernatur ab!</div>
-                <img class="sidebar__arrow" src="img/arrow.png" alt="Arrow">
-                <div class="sidebar__icons">
-                    <a href="#"><span class="icon-facebook"></span></a>
-                    <a href="#"><span class="icon-twitter"></span></a>
-                    <a href="#"><span class="icon-youtube"></span></a>
-                </div>
-            </div>
-            <div class="header__photo">
-                <img src="img/img_header.png" alt="Mountain">
-                <div class="photo__arrows">
-                    <img class="sidebar__arrow" src="img/arrow.png" alt="Arrow">
-                    <img class="sidebar__arrow" src="img/arrow.png" alt="Arrow">
-                </div>
-            </div>
-            <div class="header__pages">
-                <div class="pages__item">01</div>
-                <div class="pages__item">02</div>
-                <div class="pages__item">03</div>
-            </div>
-        </header>
-        <section class="challenges">
-            <h4 class="chellenges__heading">Popular challenges</h4>
-            <div class="challenges__post">
-                <img src="img/fire.png" alt="Campfire" class="post__photo">
-                <h6 class="post__sub-heading">key skills</h6>
-                <h5 class="post__heading">Friction-Based Fire Making</h5>
-                <p class="post__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus debitis recusandae!</p>
-                <a href="#"><span class="icon-x"></span>find out more</a>
-            </div>
-            <div class="challenges__post">
-                <img src="img/img_fire.png" alt="Shelter" class="post__photo">
-                <h6 class="post__sub-heading">key skills</h6>
-                <h5 class="post__heading">Make your own shelter</h5>
-                <p class="post__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus debitis recusandae!</p>
-                <a href="#"><span class="icon-x"></span>find out more</a>
-            </div>
-            <div class="challenges__post">
-                <img src="img/meal.png" alt="Meal" class="post__photo">
-                <h6 class="post__sub-heading">key skills</h6>
-                <h5 class="post__heading">Prepare a meal in the forest</h5>
-                <p class="post__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil accusamus debitis recusandae!</p>
-                <a href="#"><span class="icon-x"></span>find out more</a>
-            </div>
-            <div class="challenges__mission">
-                <div class="mission__number">01</div>
-                <div class="mission__endurance">
-                    <h2 class="endurance__heading-1">endurance</h2>
-                    <h3 class="endurance__sub-heading">challenges</h3>
-                    <img src="img/boots.png" alt="Boots" class="endurance__boots">
-                </div>
-                <div class="mission__post">
-                    <h3 class="post__heading-2">Mission</h3>
-                    <h5 class="post__sub-heading-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h5>
-                    <p class="post__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi harum perspiciatis quibusdam quod incidunt aperiam sit molestias nobis, voluptas adipisci voluptatibus.</p>
-                    <a href="#"><span class="icon-x"></span>find out more</a>
-                </div>
-            </div>
-        </section>
-
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/style.css" />
+		<title>Survival Page</title>
+	</head>
+	<body>
+		<div class="container">
+			<nav class="navbar">
+				<img class="navbar__logo" src="img/black_logo.png" alt="Logo" />
+				<div class="navbar__elements">
+					<a href="#" class="elements__item">our competitors</a>
+					<a href="#" class="elements__item">for professionals</a>
+					<a href="#" class="elements__item">contact</a>
+					<div class="elemets__line"></div>
+					<a href="#"><span class="icon-user"></span></a>
+					<a href="#"><span class="icon-magnifying-glass"></span></a>
+				</div>
+			</nav>
+			<header class="header">
+				<div class="header__sidebar">
+					<div class="sidebar__heading">
+						<h2 class="heading__black">Find out if you can</h2>
+						<h1 class="heading__red">survive</h1>
+					</div>
+					<div class="sidebar__text">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Obcaecati, aspernatur ab!
+					</div>
+					<img
+						class="sidebar__arrow"
+						src="img/arrow.png"
+						alt="Arrow"
+					/>
+					<div class="sidebar__icons">
+						<a href="#"><span class="icon-facebook"></span></a>
+						<a href="#"><span class="icon-twitter"></span></a>
+						<a href="#"><span class="icon-youtube"></span></a>
+					</div>
+				</div>
+				<div class="header__photo">
+					<img src="img/img_header.png" alt="Mountain" />
+					<div class="photo__arrows">
+						<img
+							class="sidebar__arrow"
+							src="img/arrow.png"
+							alt="Arrow"
+						/>
+						<img
+							class="sidebar__arrow"
+							src="img/arrow.png"
+							alt="Arrow"
+						/>
+					</div>
+				</div>
+				<div class="header__pages">
+					<div class="pages__item">01</div>
+					<div class="pages__item">02</div>
+					<div class="pages__item">03</div>
+				</div>
+			</header>
+			<section class="challenges">
+				<h4 class="chellenges__heading">Popular challenges</h4>
+				<div class="challenges__post">
+					<img
+						src="img/fire.png"
+						alt="Campfire"
+						class="post__photo"
+					/>
+					<h6 class="post__sub-heading">key skills</h6>
+					<h5 class="post__heading">Friction-Based Fire Making</h5>
+					<p class="post__text">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Nihil accusamus debitis recusandae!
+					</p>
+					<a href="#"><span class="icon-x"></span>find out more</a>
+				</div>
+				<div class="challenges__post">
+					<img
+						src="img/img_fire.png"
+						alt="Shelter"
+						class="post__photo"
+					/>
+					<h6 class="post__sub-heading">key skills</h6>
+					<h5 class="post__heading">Make your own shelter</h5>
+					<p class="post__text">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Nihil accusamus debitis recusandae!
+					</p>
+					<a href="#"><span class="icon-x"></span>find out more</a>
+				</div>
+				<div class="challenges__post">
+					<img src="img/meal.png" alt="Meal" class="post__photo" />
+					<h6 class="post__sub-heading">key skills</h6>
+					<h5 class="post__heading">Prepare a meal in the forest</h5>
+					<p class="post__text">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Nihil accusamus debitis recusandae!
+					</p>
+					<a href="#"><span class="icon-x"></span>find out more</a>
+				</div>
+				<div class="challenges__mission">
+					<div class="mission__number">01</div>
+					<div class="mission__endurance">
+						<h2 class="endurance__heading-1">endurance</h2>
+						<h3 class="endurance__sub-heading">challenges</h3>
+						<img
+							src="img/boots.png"
+							alt="Boots"
+							class="endurance__boots"
+						/>
+					</div>
+					<div class="mission__post">
+						<h3 class="post__heading-2">Mission</h3>
+						<h5 class="post__sub-heading-2">
+							Lorem ipsum dolor sit amet consectetur, adipisicing
+							elit.
+						</h5>
+						<p class="post__description">
+							Lorem ipsum dolor sit amet consectetur, adipisicing
+							elit. Sequi harum perspiciatis quibusdam quod
+							incidunt aperiam sit molestias nobis, voluptas
+							adipisci voluptatibus.
+						</p>
+						<a href="#"
+							><span class="icon-x"></span>find out more</a
+						>
+					</div>
+				</div>
+			</section>
+		</div>
+	</body>
 </html>
